k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-aggregator
  # Add other metadata as needed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hotel-aggregator
  template:
    metadata:
      labels:
        app: hotel-aggregator
    spec:
      containers:
        - name: hotel-aggregator
          image: ishitavaid/hotel-aggregator:latest
          ports:
            - containerPort: 3000
