k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-aggregator-service
spec:
  selector:
    app: hotel-aggregator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
  type: NodePort
