k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
     - http:
        paths:
          - path: /users/
            pathType: Prefix
            backend:
              service:
                name: hotel-aggregator-service
                port:
                  number: 3000
